--- a/H1.md
+++ b/H1.md
@@ -4,7 +4,9 @@ Booting the debian image from ISO-file succeeded without problems
 ## B)
 Salt Project repositoryand salt-minion was downloaded successfully using commands form docs.saltproject.io website.
 ## C)
-
+Below are screenshots of example commands i ran on my virtual machine to illustrate possible outputs of the most important commands.
+Commands ran follow imdepotence, so changes are only made when certain rules are met. For ecxample, if you run a command that creates a user, it does not do that if that user allready exists.
+This can be seen in the Screenshots below. When trying to start apache2 server with the "Service.running" command, it shows that apache2 is not available, because there is no such service downloaded.
 <img width="404" alt="TreeSS" src="https://github.com/user-attachments/assets/9bbbd5d7-dd4a-45a6-a890-c8d7ea11eca9" />
 
 <img width="362" alt="UserSS" src="https://github.com/user-attachments/assets/061251aa-e4fe-423a-ac8e-8f5900939e6e" />
@@ -14,3 +16,9 @@ Salt Project repositoryand salt-minion was downloaded successfully using command
 <img width="408" alt="FileSS" src="https://github.com/user-attachments/assets/91d21f89-ea06-44fb-bd60-12196d7c7038" />
 
 <img width="368" alt="Cmd runSS" src="https://github.com/user-attachments/assets/0c51083f-15e2-49cc-8a5c-d516fb59acda" />
+
+## D)
+Imdepotence can be thought of as basicallly if-else statements. If a wanted state is not present, a change is made, otherwise nothing is done.
+This makes making changes to multiple systems easier, because you dont have to manually check the states of different machines, you can send a command asking every machine that is not in a desirable state to change, and all other can ignore this. In the screenshots above, iv'e shown some examples of how the system responds positively to given commands, and one where the desired state is unreachable
+
+
