--- a/H1.md
+++ b/H1.md
@@ -2,7 +2,7 @@
 ## A)
 Booting the debian image from ISO-file succeeded without problems
 ## B)
-Salt Project repositoryand salt-minion was downloaded successfully using commands form docs.saltproject.io website.
+Salt Project repositoryand salt-minion was downloaded successfully using commands from docs.saltproject.io website.
 ## C)
 Below are screenshots of example commands i ran on my virtual machine to illustrate possible outputs of the most important commands.
 Commands ran follow imdepotence, so changes are only made when certain rules are met. For ecxample, if you run a command that creates a user, it does not do that if that user allready exists.
@@ -20,5 +20,30 @@ This can be seen in the Screenshots below. When trying to start apache2 server w
 ## D)
 Imdepotence can be thought of as basicallly if-else statements. If a wanted state is not present, a change is made, otherwise nothing is done.
 This makes making changes to multiple systems easier, because you dont have to manually check the states of different machines, you can send a command asking every machine that is not in a desirable state to change, and all other can ignore this. In the screenshots above, iv'e shown some examples of how the system responds positively to given commands, and one where the desired state is unreachable
+
+## X) Summary from references
+Reports:
+-Making reports and notes while you are solving probelms or assignements is helpful, and need to be detailed to be understood by everyone and replicatable.
+-Good reports do not lie, plagiarize or use sources that belong to someone else.
+
+Running Salt Locally:
+-Most important commands for now are file, pkg, user, service, cmd.run.
+-cmd.run is not inherently idempotent, it will run given commands unless specified.
+-salt commands can be used locally to test commands to see results immediately
+
+Salt Quickstart:
+-Slave machines can be located anywhere on the net and conterolled. Slave machines only need to no the masters address, so they can report to it.
+-Each slave must have a unique identifier.
+
+
+### References
+https://terokarvinen.com/2006/06/04/raportin-kirjoittaminen-4/
+https://terokarvinen.com/2021/salt-run-command-locally/
+https://terokarvinen.com/2018/03/28/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/
+https://docs.saltproject.io/salt/install-guide/en/latest/topics/install-by-operating-system/linux-deb.html
+https://terokarvinen.com/palvelinten-hallinta/
+https://en.wikipedia.org/wiki/Idempotence
+
+
 
 
