--- a/H2.md
+++ b/H2.md
@@ -22,5 +22,123 @@ After getting the machine up, i tested connection to the machine with the comman
 <img width="659" alt="image" src="https://github.com/user-attachments/assets/7e507b30-5d8c-4679-8cee-bd65afa62944" />  
 
 ## Making two virtual machines.  
-After making the 
+After making the first machine, i destoryed it with the command `vagrant destory`, so i can start making the two new machines from the start.
+First i navigated to the /twohost file, and located my vagrantfile made previously. I opened the file and added these configutations to it.  
+<img width="443" alt="image" src="https://github.com/user-attachments/assets/fde7c483-3002-4d45-ab73-dc6aca45c382" />  
+I added configurations for two virtual machines circled in red, so that the next time i open cmd, and give the command `vagrant up`, it automatically creates these two machines. 
+As we can see, the two maschines appeared in virtual box after giving the command.  
+<img width="177" alt="image" src="https://github.com/user-attachments/assets/934f8c09-4214-4031-8e73-bec80653e1cc" />  
+After this i tried to test the connection between the machines. I took an SSH connection to one of the new machines, in this example it is the machine t001, and i tried to ping machine t002.  
+First the SSH connection was made to machine t001.  
+<img width="572" alt="image" src="https://github.com/user-attachments/assets/efe1844e-f070-4c6a-97ea-91919792920c" />  
+And then i tested the connection with the `ping` command, and giving it the ip address i added to t002 machines configuration.  
+<img width="461" alt="image" src="https://github.com/user-attachments/assets/56d1b650-a1ef-49c4-9fcc-dfa329001db0" />  
+And after giving the command, i see that t002 is replying to the ping command from t001.  
+
+## Master-slave architecture test.  
+To test master slave architecture with my two new virtal machines using salt, i have to install salt to both of the machines.
+First step in installing salt is making a directory for the public key i will be downloading for the install.  
+I gave the command `mkdir -p /etc/apt/keyrings`, to make the directory.  
+After this i tried to download the public key with the command `curl -fsSL https://packages.broadcom.com/artifactory/api/security/keypair/SaltProjectKey/public | sudo tee /etc/apt/keyrings/salt-archive-keyring.pgp`, but realised my machine does not have curl installed, so it cant yet download from web-addresses.  
+<img width="341" alt="image" src="https://github.com/user-attachments/assets/7b680be0-0aa9-4b68-a9d8-022eb5fcfa20" />  
+
+To fix the issue, i installed curl to my machine with the command `sudo apt-get install curl`  
+<img width="368" alt="image" src="https://github.com/user-attachments/assets/77301590-d19f-4779-b2df-9ba47458d019" />  
+After this i tried to download the public key again, and it succeeded.  
+Now that the directory for the public key is created and the public key is downloaded. I give the command `curl -fsSL https://github.com/saltstack/salt-install-guide/releases/latest/download/salt.sources | sudo tee /etc/apt/sources.list.d/salt.sources` to download sald packages.  
+<img width="942" alt="image" src="https://github.com/user-attachments/assets/269abc3f-51f8-4b8d-a877-bf2eccf79a95" />  
+Lastly, i get the latest updates for salt with the command ` sudo apt-get update`  
+<img width="758" alt="image" src="https://github.com/user-attachments/assets/356a4ae7-f855-4f48-956c-3e9a50305d65" />  
+### Second machine t002.  
+I ran identical commands on the second machine, and the result were the same.  
+
+### Installing salt minions.
+On the t001 machine i will install the salt-master, and on the t002 machine, i will install the salt-minion.  
+First i took an SSH- connection back to t001 machine, and gave the command `sudo apt-get install salt-master`  
+After this i gave the command `sudo systemctl restart salt-master` to make sure it is running properly.  
+<img width="409" alt="image" src="https://github.com/user-attachments/assets/9758e096-903e-4a94-8d6f-c12f4693611c" />  
+After succesfully installing the master, i will take an SSH connection to t002 machine to install the salt-minion.  
+After taking connection to t002 machine, i gave it the command `sudo apt-get install salt-minion` to install the minion.  
+<img width="409" alt="image" src="https://github.com/user-attachments/assets/0e2e45e6-3744-4dc9-bbaa-2e3db2041719" />.  
+This minion needs to know where the master is, so i have to add the master ip-address to salt-minion configuration file.  
+I navigate to the configuration file with the command `sudoedit /etc/salt/minion`.  
+<img width="541" alt="image" src="https://github.com/user-attachments/assets/a0e9032f-c919-48c9-b43a-277012053f95" />  
+Now that i am inside the configuration file, i remove the "#" mark from the wanted configuration (underlined in red in the above picture), and add the ip address to it.  
+<img width="337" alt="image" src="https://github.com/user-attachments/assets/198a7b5e-31ab-4b0f-a981-7f6532941ffc" />  
+Lastly, i have to give the minion-machine the command `sudo systemctl restart salt-minion` to "kick" the process up ad running.  
+Now that the salt master and minion have been installed, and the minion is configured to know where the master is, i should find request to accept the minions key from the master-machine.  
+After exiting the minion machine, took an SSH connection to the master machine with the command `vagrant ssh t001`, and gave the command `sudo salt-key -A` to find if the minion machine has sen the key to to master machine.  
+<img width="479" alt="image" src="https://github.com/user-attachments/assets/54053ce2-b359-4063-bab5-47ffeba654e7" />  
+And it had indeex sent a key to the master-machine.
+
+# Controlling minion-machine.
+Now that i have two virtual machines that have salt installed, i will try to send commands to the minion machine.  
+First i will try to create a new user on the minion-machine.  
+I gave the command `sudo salt '*' single.state user.present testimies` and the minion-machine responded that the instructions were followed succesfully and a new user was created.  
+<img width="370" alt="image" src="https://github.com/user-attachments/assets/eb0c47f3-fc32-41cf-af32-f231c213f871" />  
+I went back to the minion-machine to confirm that this was indeed the case, by giving the command `cat/etc/passwd` and a new user was found.  
+<img width="543" alt="image" src="https://github.com/user-attachments/assets/3ec7bf54-33f5-45de-a6a3-7c69a6b26777" />  
+.
+.  
+Next i will try to install apache2 to my minion-machine, by using the `pkg.installed` command.  
+First i navigated to t001 machine terminal, and gave the command `sudo salt '*' state.single pkg.installed apache2`  
+I made i typo the first time i tried, and got the following answer.  
+<img width="367" alt="image" src="https://github.com/user-attachments/assets/05515f28-1cfc-4c71-bc93-0e4610cf5875" />  
+But when giving the right command, the minion-machine returned a message that apache2 was installed on the machine.  
+<img width="208" alt="image" src="https://github.com/user-attachments/assets/e090bd36-f6d3-4227-9d82-dba8f19b19b4" />  
+To test that apache2 was succesfully installed, i returned to the minion-machine, and gave the command `sudo systemctl start apache2`  
+After that i got my local ip-address with the command `hostname -i` and with the command `curl 127.0.1.1` i tried to open apache2 startpage.  
+<img width="871" alt="image" src="https://github.com/user-attachments/assets/654849eb-9288-43fa-8955-93ae55817025" />  
+And i succesfully got it open.  
+
+# Summary of material.  
+
+## Two Machine Virtual Network With Debian 11 Bullseye and Vagrant
+- Installing vagrant to Debian and Ubuntu is done with the command `sudo apt-get install vagrant virtualbox` (If the virtualisation enviroment is Virtualbox), to Mac and windows you have to download it from install links from "https://developer.hashicorp.com/vagrant/install" website.
+- You can modify vagrantfile configurations to automatically set up as many machines as you need.
+
+## Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux  
+- Salt- master installation is done with the command `sudo apt-get -y install salt-master`
+- Salt-minion installation is done with the command `suod apt-get -y install salt-minion`
+- The slave must know where the master is to make a connection, so the minions configuration file must contain master IP-address.
+- The master-machine must accept minions key to command it.
+
+## Salt Vagrant - automatically provision one master and two slaves
+- Vagrantfile can be modified to automatically make multiple machines, that autmatically install the correct salt-packages.  
+- The best way to command computers is to give the end states that they must achieve.
+- `vagrant destory computers` command destorys all the computers that have been made using vagrant.
+
+
+  # References
+  https://terokarvinen.com/palvelinten-hallinta/#laksyt  
+  https://terokarvinen.com/2021/two-machine-virtual-network-with-debian-11-bullseye-and-vagrant/    
+  https://terokarvinen.com/2023/salt-vagrant/#infra-as-code---your-wishes-as-a-text-file  
+  https://developer.hashicorp.com/vagrant/docs/installation  
+  https://terokarvinen.com/2018/salt-quickstart-salt-stack-master-and-slave-on-ubuntu-linux/?fromSearch=salt%20quickstart%20salt%20stack%20master%20and%20slave%20on%20ubuntu%20linux  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
