--- a/H2.md
+++ b/H2.md
@@ -2,7 +2,7 @@
 I have previously downloaded both VirtualBox and Vagrant, so i dont have documentation left from it. Below is a screencapture showing that i do indeed have vagrant installed.  
 <img width="237" alt="image" src="https://github.com/user-attachments/assets/e15d04a0-5dd4-41a7-a933-e2c3cb4582d1" />  
 ## Setting up a virtual machine with vagrant.  
-First i had to install the desired OS, in this case it was debian/bookworm64.After givin the command `vagrant box add debian/booworm64`, i was prompted to choose a provider, i chose VirtualBox as i had that one installed.  
+First i had to install the desired OS, in this case it was debian/bookworm64. After giving the command `vagrant box add debian/booworm64`, i was prompted to choose a provider, i chose VirtualBox as i had that one installed.  
   
   
   
