--- a/H2.md
+++ b/H2.md
@@ -1,8 +1,8 @@
 # Homework assingment: Getting multiple virtual machines running and installing salt.  
-I have previously downloaded both VirtualBox and Vagrant, so i dont have documentation left from it. Below is a screencapture showing that i do indeed have vagrant installed.  
+I have previously downloaded both VirtualBox and Vagrant, so I dont have documentation left from it. Below is a screencapture showing that I do indeed have vagrant installed.  
 <img width="237" alt="image" src="https://github.com/user-attachments/assets/e15d04a0-5dd4-41a7-a933-e2c3cb4582d1" />  
 ## Setting up a virtual machine with vagrant.  
-First i had to install the desired OS, in this case it was debian/bookworm64. After giving the command `vagrant box add debian/booworm64`, i was prompted to choose a provider, i chose VirtualBox as i had that one installed.  
+First I had to install the desired OS, in this case it was debian/bookworm64. After giving the command `vagrant box add debian/booworm64`, I was prompted to choose a provider, I chose VirtualBox as I had that one installed.  
   
   
   
@@ -10,91 +10,91 @@ First i had to install the desired OS, in this case it was debian/bookworm64. Af
 <img width="941" alt="image" src="https://github.com/user-attachments/assets/f3ff8bc6-f043-4138-bb30-93466b1151a1" />  
   
   
-After installing the OS, i created a file named "twohost" and navigated to it in windows command prompt. After navigating to it i gave the command `vagrant init debian/bookworm64`to palce a vagrantfaile in to the directory   
+After installing the OS, I created a file named "twohost" and navigated to it in windows command prompt. After navigating to it I gave the command `vagrant init debian/bookworm64`to palce a vagrantfaile in to the directory   
   
   
 <img width="476" alt="image" src="https://github.com/user-attachments/assets/80bc534f-b33a-4398-87b1-739d5218eb0f" />   
 
-After this i gave the command  `Vagrant up` to get my first virtual machine up and running.  
+After this I gave the command  `Vagrant up` to get my first virtual machine up and running.  
 <img width="358" alt="image" src="https://github.com/user-attachments/assets/1c536c35-8846-400c-b506-d39df2843cac" />  
-After getting the machine up, i tested connection to the machine with the commant `vagrant ssh`,and got a succesful connection.  
+After getting the machine up, I tested connection to the machine with the command `vagrant ssh`,and got a succesful connection.  
 
 <img width="659" alt="image" src="https://github.com/user-attachments/assets/7e507b30-5d8c-4679-8cee-bd65afa62944" />  
 
 ## Making two virtual machines.  
-After making the first machine, i destoryed it with the command `vagrant destory`, so i can start making the two new machines from the start.
-First i navigated to the /twohost file, and located my vagrantfile made previously. I opened the file and added these configutations to it.  
+After making the first machine, I destoryed it with the command `vagrant destory`, so I can start making the two new machines from the start.
+First I navigated to the /twohost file, and located my vagrantfile made previously. I opened the file and added these configurations to it.  
 <img width="443" alt="image" src="https://github.com/user-attachments/assets/fde7c483-3002-4d45-ab73-dc6aca45c382" />  
-I added configurations for two virtual machines circled in red, so that the next time i open cmd, and give the command `vagrant up`, it automatically creates these two machines. 
-As we can see, the two maschines appeared in virtual box after giving the command.  
+I added configurations for two virtual machines circled in red, so that the next time I open cmd, and give the command `vagrant up`, it automatically creates these two machines. 
+As we can see, the two machines appeared in virtual box after giving the command.  
 <img width="177" alt="image" src="https://github.com/user-attachments/assets/934f8c09-4214-4031-8e73-bec80653e1cc" />  
-After this i tried to test the connection between the machines. I took an SSH connection to one of the new machines, in this example it is the machine t001, and i tried to ping machine t002.  
+After this I tried to test the connection between the machines. I took an SSH connection to one of the new machines, in this example it is the machine t001 and I tried to ping machine t002.  
 First the SSH connection was made to machine t001.  
 <img width="572" alt="image" src="https://github.com/user-attachments/assets/efe1844e-f070-4c6a-97ea-91919792920c" />  
-And then i tested the connection with the `ping` command, and giving it the ip address i added to t002 machines configuration.  
+then I tested the connection with the `ping` command and giving it the ip address I added to t002 machines configuration.  
 <img width="461" alt="image" src="https://github.com/user-attachments/assets/56d1b650-a1ef-49c4-9fcc-dfa329001db0" />  
-And after giving the command, i see that t002 is replying to the ping command from t001.  
+After giving the command, I see that t002 is replying to the ping command from t001.  
 
 ## Master-slave architecture test.  
-To test master slave architecture with my two new virtal machines using salt, i have to install salt to both of the machines.
-First step in installing salt is making a directory for the public key i will be downloading for the install.  
+To test master-slave architecture with my two new virtal machines using salt, I have to install salt to both of the machines.
+First step in installing salt is making a directory for the public key I will be downloading for the install.  
 I gave the command `mkdir -p /etc/apt/keyrings`, to make the directory.  
-After this i tried to download the public key with the command `curl -fsSL https://packages.broadcom.com/artifactory/api/security/keypair/SaltProjectKey/public | sudo tee /etc/apt/keyrings/salt-archive-keyring.pgp`, but realised my machine does not have curl installed, so it cant yet download from web-addresses.  
+After this I tried to download the public key with the command `curl -fsSL https://packages.broadcom.com/artifactory/api/security/keypair/SaltProjectKey/public | sudo tee /etc/apt/keyrings/salt-archive-keyring.pgp`, but realised my machine does not have curl installed, so it cant yet download from web-addresses.  
 <img width="341" alt="image" src="https://github.com/user-attachments/assets/7b680be0-0aa9-4b68-a9d8-022eb5fcfa20" />  
 
-To fix the issue, i installed curl to my machine with the command `sudo apt-get install curl`  
+To fix the issue, I installed curl to my machine with the command `sudo apt-get install curl`  
 <img width="368" alt="image" src="https://github.com/user-attachments/assets/77301590-d19f-4779-b2df-9ba47458d019" />  
-After this i tried to download the public key again, and it succeeded.  
+After this I tried to download the public key again, and it succeeded.  
 Now that the directory for the public key is created and the public key is downloaded. I give the command `curl -fsSL https://github.com/saltstack/salt-install-guide/releases/latest/download/salt.sources | sudo tee /etc/apt/sources.list.d/salt.sources` to download sald packages.  
 <img width="942" alt="image" src="https://github.com/user-attachments/assets/269abc3f-51f8-4b8d-a877-bf2eccf79a95" />  
-Lastly, i get the latest updates for salt with the command ` sudo apt-get update`  
+Lastly, I get the latest updates for salt with the command ` sudo apt-get update`  
 <img width="758" alt="image" src="https://github.com/user-attachments/assets/356a4ae7-f855-4f48-956c-3e9a50305d65" />  
 ### Second machine t002.  
-I ran identical commands on the second machine, and the result were the same.  
+I ran identical commands on the second machine and the result were the same.  
 
 ### Installing salt minions.
-On the t001 machine i will install the salt-master, and on the t002 machine, i will install the salt-minion.  
-First i took an SSH- connection back to t001 machine, and gave the command `sudo apt-get install salt-master`  
-After this i gave the command `sudo systemctl restart salt-master` to make sure it is running properly.  
+On the t001 machine I will install the salt-master, and on the t002 machine, I will install the salt-minion.  
+First I took an SSH- connection back to t001 machine, and gave the command `sudo apt-get install salt-master`  
+After this I gave the command `sudo systemctl restart salt-master` to make sure it is running properly.  
 <img width="409" alt="image" src="https://github.com/user-attachments/assets/9758e096-903e-4a94-8d6f-c12f4693611c" />  
-After succesfully installing the master, i will take an SSH connection to t002 machine to install the salt-minion.  
-After taking connection to t002 machine, i gave it the command `sudo apt-get install salt-minion` to install the minion.  
+After succesfully installing the master, I will take an SSH connection to t002 machine to install the salt-minion.  
+After taking connection to t002 machine, I gave it the command `sudo apt-get install salt-minion` to install the minion.  
 <img width="409" alt="image" src="https://github.com/user-attachments/assets/0e2e45e6-3744-4dc9-bbaa-2e3db2041719" />.  
-This minion needs to know where the master is, so i have to add the master ip-address to salt-minion configuration file.  
-I navigate to the configuration file with the command `sudoedit /etc/salt/minion`.  
+This minion needs to know where the master is, so I have to add the master ip-address to salt-minion configuration file.  
+I navigated to the configuration file with the command `sudoedit /etc/salt/minion`.  
 <img width="541" alt="image" src="https://github.com/user-attachments/assets/a0e9032f-c919-48c9-b43a-277012053f95" />  
-Now that i am inside the configuration file, i remove the "#" mark from the wanted configuration (underlined in red in the above picture), and add the ip address to it.  
+Now that I am inside the configuration file, I remove the "#" mark from the wanted configuration (underlined in red in the above picture) and add the ip address to it.  
 <img width="337" alt="image" src="https://github.com/user-attachments/assets/198a7b5e-31ab-4b0f-a981-7f6532941ffc" />  
-Lastly, i have to give the minion-machine the command `sudo systemctl restart salt-minion` to "kick" the process up ad running.  
-Now that the salt master and minion have been installed, and the minion is configured to know where the master is, i should find request to accept the minions key from the master-machine.  
-After exiting the minion machine, took an SSH connection to the master machine with the command `vagrant ssh t001`, and gave the command `sudo salt-key -A` to find if the minion machine has sen the key to to master machine.  
+Lastly, I have to give the minion-machine the command `sudo systemctl restart salt-minion` to "kick" the process up ad running.  
+Now that the salt master and minion have been installed, and the minion is configured to know where the master is, I should find request to accept the minions key from the master-machine.  
+After exiting the minion machine, took an SSH connection to the master machine with the command `vagrant ssh t001` and gave the command `sudo salt-key -A` to find if the minion machine has sen the key to to master machine.  
 <img width="479" alt="image" src="https://github.com/user-attachments/assets/54053ce2-b359-4063-bab5-47ffeba654e7" />  
 And it had indeex sent a key to the master-machine.
 
 # Controlling minion-machine.
-Now that i have two virtual machines that have salt installed, i will try to send commands to the minion machine.  
-First i will try to create a new user on the minion-machine.  
+Now that I have two virtual machines that have salt installed, I will try to send commands to the minion machine.  
+First I will try to create a new user on the minion-machine.  
 I gave the command `sudo salt '*' single.state user.present testimies` and the minion-machine responded that the instructions were followed succesfully and a new user was created.  
 <img width="370" alt="image" src="https://github.com/user-attachments/assets/eb0c47f3-fc32-41cf-af32-f231c213f871" />  
 I went back to the minion-machine to confirm that this was indeed the case, by giving the command `cat/etc/passwd` and a new user was found.  
 <img width="543" alt="image" src="https://github.com/user-attachments/assets/3ec7bf54-33f5-45de-a6a3-7c69a6b26777" />  
 .
 .  
-Next i will try to install apache2 to my minion-machine, by using the `pkg.installed` command.  
-First i navigated to t001 machine terminal, and gave the command `sudo salt '*' state.single pkg.installed apache2`  
-I made i typo the first time i tried, and got the following answer.  
+Next I will try to install apache2 to my minion-machine, by using the `pkg.installed` command.  
+First I navigated to t001 machine terminal and gave the command `sudo salt '*' state.single pkg.installed apache2`  
+I made I typo the first time I tried and got the following answer.  
 <img width="367" alt="image" src="https://github.com/user-attachments/assets/05515f28-1cfc-4c71-bc93-0e4610cf5875" />  
-But when giving the right command, the minion-machine returned a message that apache2 was installed on the machine.  
+But when giving the right command the minion-machine returned a message that apache2 was installed on the machine.  
 <img width="208" alt="image" src="https://github.com/user-attachments/assets/e090bd36-f6d3-4227-9d82-dba8f19b19b4" />  
-To test that apache2 was succesfully installed, i returned to the minion-machine, and gave the command `sudo systemctl start apache2`  
-After that i got my local ip-address with the command `hostname -i` and with the command `curl 127.0.1.1` i tried to open apache2 startpage.  
+To test that apache2 was succesfully installed, I returned to the minion-machine and gave the command `sudo systemctl start apache2`  
+After that I got my local ip-address with the command `hostname -i` and with the command `curl 127.0.1.1` I tried to open apache2 startpage.  
 <img width="871" alt="image" src="https://github.com/user-attachments/assets/654849eb-9288-43fa-8955-93ae55817025" />  
-And i succesfully got it open.  
+i succesfully got it open.  
 
 # Summary of material.  
 
 ## Two Machine Virtual Network With Debian 11 Bullseye and Vagrant
-- Installing vagrant to Debian and Ubuntu is done with the command `sudo apt-get install vagrant virtualbox` (If the virtualisation enviroment is Virtualbox), to Mac and windows you have to download it from install links from "https://developer.hashicorp.com/vagrant/install" website.
+- Installing vagrant to Debian and Ubuntu is done with the command `sudo apt-get install vagrant virtualbox` (if the virtualisation enviroment is Virtualbox), to Mac and windows you have to download it from install links from "https://developer.hashicorp.com/vagrant/install" website.
 - You can modify vagrantfile configurations to automatically set up as many machines as you need.
 
 ## Salt Quickstart – Salt Stack Master and Slave on Ubuntu Linux  
