--- a/H3.md
+++ b/H3.md
@@ -1,11 +1,11 @@
 # Assignment 3 - Infrastructure as code
 
 ## A) Running infrastructure as code locally  
-First steps to take in this assignment is to start up virtual machines.  
+First step to take in this assignment is to start up virtual machines.  
 I will be using vagrant to set up two machines now, because I will be needing them both in a future step.
-I have vagrant already installed from previous assignments, and I have a configuration file set up to start two machines (vagrant configuration can be found in this repository under file h2.md).  
+I have vagrant already installed from previous assignments and I have a configuration file set up to start two machines (vagrant configuration can be found in this repository under file h2.md).  
 So I only have to open the command line on my computer and give the command `vagrant up` and I will have two virtual machines ready to go.  
-Next I will be downloading salt to both of the virtual machines.I will download salt-master to one machine, and salt-minion on the other.  
+Next I will be downloading salt to both of the virtual machines. I will download salt-master to one machine and salt-minion on the other.  
 (The entire documentation for that is also found in this repository under h2.md file)  
 </br>
 Now that I have two machines up and salt installed on both of them, I can start writing the file from which code will be run from.  
@@ -14,18 +14,20 @@ Now that I have two machines up and salt installed on both of them, I can start 
 I will start by installing micro editor with the command `sudo apt-get install micro` and changing it to my default editor with the command `export EDITOR=micro`.  
 (Hello Salt Infra-as-code, terokarvinen.com)
 </br>
-After this I will make a new directory under salt-directory with the command `sudo mkdir -p /srv/salt/hello/`, and then navigate into the new directory with the command `cd /srv/salt/hello/`.  
-(Hello Salt Infra-as-code, terokarvinen.com, )
+After this I will make a new directory under salt-directory with the command `sudo mkdir -p /srv/salt/hello/` and then navigate into the new directory with the command `cd /srv/salt/hello/`.  
+(Hello Salt Infra-as-code, terokarvinen.com)
 <img width="251" alt="image" src="https://github.com/user-attachments/assets/9c0ea8c6-8379-4b09-8f74-16d0fd305e7f" />  
 </br>
-After that, I will create a .sls file inside the newly created /hello folder with the command `sudoedit init.sls`  
+After that, I will create a .sls file inside the newly created /hello folder with the command  
+`sudoedit init.sls` (Hello Salt Infra-as-code, terokarvinen.com)  
 <img width="512" alt="image" src="https://github.com/user-attachments/assets/06f4f831-4f77-4803-8d24-ec344b8e591e" />  
-Now that the new file is open in micro, I will start writing commands in to it, so that I can run salt commands from the file.  
-For now I will only write local commands, running there commands to another machine comes in a future step. 
-<img width="211" alt="image" src="https://github.com/user-attachments/assets/b6535880-2eb5-4ed4-887f-43a457777a9d" />  
-(Hello Salt Infra-as-code, terokarvinen.com)  
+Now that the new file is open in micro, I will start writing commands in to it so that I can run salt commands from the file.  
+For now I will only write local commands. Running the commands to another machine comes in a future step. 
+<img width="211" alt="image" src="https://github.com/user-attachments/assets/b6535880-2eb5-4ed4-887f-43a457777a9d" />   
 </br>
-Now that the file has been created and commands written, I´ll try to run the command `sudo salt-call --local state.apply hello`.  
+Now that the file has been created and commands written, I´ll try to run the command  
+`sudo salt-call --local state.apply hello` (Hello Salt Infra-as-code, terokarvinen.com)  
+
 <img width="581" alt="image" src="https://github.com/user-attachments/assets/fd3ad3a7-8231-417b-8ad2-0c931a1bbc39" />
 </br>
 Oops, the command returned an error message. After a brief moment thinking about what went wrong, I noticed that I had made two typos when writing the command.  
@@ -34,10 +36,10 @@ I corrected the typos as seen in the screenshot below.
 </br>  
 Okay, that did not fix the error, back to the drawing board.  
 After googling salt syntax and confirming that it was indeed correct, I started thinking that I may have forgotten to install updates to this machine.  
-After installing updates and confirming that it did not fix the problem, I started googling once again.  
+After installing updates and confirming that it did not fix the problem I started googling once again.  
 And after about 30 minutes, I looked over this website (https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml).  
 And on the website it says that "Indentation sets the context. You MUST indent your properties and list with one or more spaces, but two spaces is standard."  
-And like a fool, I was doing indentation with the tabulator, and not with spaces. (Personal note: this was highly frustrating to figure out).  
+And like a fool, I was doing indentation with the tabulator and not with spaces. (Personal note: this was highly frustrating to figure out).  
 </br>
 </br>
 Now that the problem was finally resolved, the command finally went through without errors.  
@@ -47,28 +49,30 @@ To test the idempotency of the command, I ran it again and was greeted with this
 <img width="384" alt="image" src="https://github.com/user-attachments/assets/296fbf16-6f3e-4264-a95b-2bdbf32b7370" />  
 </br>
 And as we can see, no additional changes are being made from consecutive runs.  
-And for my final check, I navigated to /tmp directory to see if the file was indeed made.  
+And for my final check I navigated to /tmp directory to see if the file was indeed made.  
 <img width="228" alt="image" src="https://github.com/user-attachments/assets/6d5f3938-28dd-4f57-987c-ae8d187c2069" />  
 </br>
 
 ## B) Running the .sls file over net to slave
 Now it is time to run the file to the slave from the master. By my mistake, I was accidentally running the previous steps on the slave-machine, so I will have to create the /hello file and .sls file to the master machine.  
-Because i have already created a file in the slave machine, i slightly modified the file name that will be created.  
+Because I have already created a file in the slave machine, I slightly modified the file name that will be created.  
 <img width="190" alt="image" src="https://github.com/user-attachments/assets/699fd4cb-02e8-4ed3-8278-12a0a8b8d585" />  
 </br>
-Now i will use the command `sudo salt '*' state.apply hello` to make the file on the slave-machine.  
-After fixing an another typo in the .sls file (mission ":" at the end of line one), i got an successful output  
+Now I will use the command `sudo salt '*' state.apply hello` to make the file on the slave-machine.  
+After fixing an another typo in the .sls file (mission ":" at the end of line one) I got an successful output  
 <img width="376" alt="image" src="https://github.com/user-attachments/assets/4d7b813a-408e-4a0e-b942-e25717d335f8" />  
 </br>
-After that, I navigated back to the slave-machine and checked that the file was indeed created.  
+After that I navigated back to the slave-machine and checked that the file was indeed created.  
 <img width="235" alt="image" src="https://github.com/user-attachments/assets/dd01101a-9aff-4685-9485-6cdc0133ab1e" />  
 </br>
 </br>
 ## C) Making a .sls file containing two state functions.  
 </br>
-First steps to making the the .sls file, is opening the file previously made, and adding more functions to it. 
+First steps to making the .sls file is opening the file previously made and adding more functions to it. 
 I will add the following functions:  
-1. pkg.installed to download apache2.   
+</br>
+1. pkg.installed to download apache2.  
+</br>
 2. user.present to create a new user.  
 </br>
 </br>
