--- a/H3.md
+++ b/H3.md
@@ -15,20 +15,20 @@ I will start by installing micro editor with the command `sudo apt-get install m
 (Hello Salt Infra-as-code, terokarvinen.com)
 </br>
 After this I will make a new directory under salt-directory with the command `sudo mkdir -p /srv/salt/hello/` and then navigate into the new directory with the command `cd /srv/salt/hello/`.  
-(Hello Salt Infra-as-code, terokarvinen.com)
+(Hello Salt Infra-as-code, terokarvinen.com)  
+</br>  
 <img width="251" alt="image" src="https://github.com/user-attachments/assets/9c0ea8c6-8379-4b09-8f74-16d0fd305e7f" />  
-</br>
+</br>  
 After that, I will create a .sls file inside the newly created /hello folder with the command  
 `sudoedit init.sls` (Hello Salt Infra-as-code, terokarvinen.com)  
 <img width="512" alt="image" src="https://github.com/user-attachments/assets/06f4f831-4f77-4803-8d24-ec344b8e591e" />  
 Now that the new file is open in micro, I will start writing commands in to it so that I can run salt commands from the file.  
-For now I will only write local commands. Running the commands to another machine comes in a future step. 
+For now I will only write local commands. Running the commands to another machine comes in a future step.  
 <img width="211" alt="image" src="https://github.com/user-attachments/assets/b6535880-2eb5-4ed4-887f-43a457777a9d" />   
 </br>
 Now that the file has been created and commands written, I´ll try to run the command  
 `sudo salt-call --local state.apply hello` (Hello Salt Infra-as-code, terokarvinen.com)  
-
-<img width="581" alt="image" src="https://github.com/user-attachments/assets/fd3ad3a7-8231-417b-8ad2-0c931a1bbc39" />
+<img width="581" alt="image" src="https://github.com/user-attachments/assets/fd3ad3a7-8231-417b-8ad2-0c931a1bbc39" />  
 </br>
 Oops, the command returned an error message. After a brief moment thinking about what went wrong, I noticed that I had made two typos when writing the command.  
 I corrected the typos as seen in the screenshot below.  
@@ -77,13 +77,15 @@ I will add the following functions:
 </br>
 </br>
 I made the following changes to the .sls file:  
+</br>
 <img width="146" alt="image" src="https://github.com/user-attachments/assets/ae8b559d-4381-4d79-9dfc-57c4ff463885" />  
 </br>
-After trying to run the commands, i was met with the following output.  
-
+After trying to run the commands, I was met with the following output.  
+</br>
 <img width="371" alt="image" src="https://github.com/user-attachments/assets/74399dc4-b040-4a64-a1bc-0686d2c1efb0" />  
 </br>
 After restarting salt on both machines and trying to run again, I was met with a positive output.  
+</br>
 <img width="298" alt="image" src="https://github.com/user-attachments/assets/2b231d8a-13b8-4150-b4e1-3cbf27f0c5cd" />  
 </br>
 I ran the command again to check that the commands given do not make additional changes on consecutive runs.  
