--- a/H3.md
+++ b/H3.md
@@ -12,22 +12,22 @@ Now that I have two machines up and salt installed on both of them, I can start 
 </br>
 </br>
 I will start by installing micro editor with the command `sudo apt-get install micro` and changing it to my default editor with the command `export EDITOR=micro`.  
-(Hello Salt Infra-as-code, terokarvinen.com)
+(Karvinen, T. 2024.)
 </br>
 After this I will make a new directory under salt-directory with the command `sudo mkdir -p /srv/salt/hello/` and then navigate into the new directory with the command `cd /srv/salt/hello/`.  
-(Hello Salt Infra-as-code, terokarvinen.com)  
+(Karvinen, T. 2024.)  
 </br>  
 <img width="251" alt="image" src="https://github.com/user-attachments/assets/9c0ea8c6-8379-4b09-8f74-16d0fd305e7f" />  
 </br>  
 After that, I will create a .sls file inside the newly created /hello folder with the command  
-`sudoedit init.sls` (Hello Salt Infra-as-code, terokarvinen.com)  
+`sudoedit init.sls` (Karvinen, T. 2024.)  
 <img width="512" alt="image" src="https://github.com/user-attachments/assets/06f4f831-4f77-4803-8d24-ec344b8e591e" />  
 Now that the new file is open in micro, I will start writing commands in to it so that I can run salt commands from the file.  
 For now I will only write local commands. Running the commands to another machine comes in a future step.  
 <img width="211" alt="image" src="https://github.com/user-attachments/assets/b6535880-2eb5-4ed4-887f-43a457777a9d" />   
 </br>
 Now that the file has been created and commands written, I´ll try to run the command  
-`sudo salt-call --local state.apply hello` (Hello Salt Infra-as-code, terokarvinen.com)  
+`sudo salt-call --local state.apply hello` (Karvinen, T. 2024.)  
 <img width="581" alt="image" src="https://github.com/user-attachments/assets/fd3ad3a7-8231-417b-8ad2-0c931a1bbc39" />  
 </br>
 Oops, the command returned an error message. After a brief moment thinking about what went wrong, I noticed that I had made two typos when writing the command.  
@@ -114,13 +114,13 @@ And now finally I will check that the changes were made on the slave-machine.
 
 ## References  
 </br>
-https://docs.saltproject.io/en/3006/topics/tutorials/starting_states.html  
+Salt Project. 2025. How Do I Use Salt States? https://docs.saltproject.io/en/3006/topics/tutorials/starting_states.html. Read: 13.4.2025.  
 </br>
-https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml  
+Salt Project. 2024. Salt Overview. https://docs.saltproject.io/salt/user-guide/en/latest/topics/overview.html#rules-of-yaml. Read: 13.4.2025.  
 </br>
-https://terokarvinen.com/2024/hello-salt-infra-as-code/  
+Karvinen, T. 2024. Hello Salt Infra-as-Code. https://terokarvinen.com/2024/hello-salt-infra-as-code/. Read: 13.4.2025.  
 </br>
-https://terokarvinen.com/palvelinten-hallinta/#laksyt  
+Karvinen, T. 2025. Palvelinten Hallinta. https://terokarvinen.com/palvelinten-hallinta/#laksyt. Read: 13.4.2025
 
 
 
